# RAF

./: .gitignore  README.md  pyproject.toml  run.sh  run_revision_6.sh  run_revision_7.sh  setup.py  test.sh  test_seg_cl_resolutions_etri.sh  test_seg_fl_256x256x256_etri.sh  test_seg_fl_512x512x256_etri.sh.sh  test_seg_fl_512x512x512_etri.sh.sh  test_uv.sh  test_uv_2.sh
experiments/mpii/: vit_small_mpii.yaml  vit_small_multi_res_sfl_mpii.yaml  vit_small_multi_res_sfl_mpii_train_kd.yaml
experiments/mpii_mpii_mpii/: temp_vit-small_256x192_192x144_128x96_low_sfl.yaml  temp_vit-small_256x192_192x144_128x96_mid_sfl.yaml  vit-small_256x192_192x144_128x96_sfl.yaml  vit-small_256x192_fl_test.yaml  vit-small_4_clients_sfl_low_low_low.yaml  vit-small_4_clients_sfl_mid_low_low.yaml
legacy/: function.py  temp_config.yaml
lib/core/: function_sfl.py  function_warmup.py  inference.py
lib/dataset/: __init__.py  build_dataloader.py  coco.py  data_augmentation.py  joints_dataset.py  joints_dataset_legacy.py  joints_dataset_new.py  joints_dataset_new_future.py  joints_dataset_new_future_future.py  joints_dataset_new_future_future_imhm_size.py  mpii.py  multi_res_coco.py  pipelines.py  pipelines_future.py
tools/: TrainScheduler.py  TrainScheduler_train_proxy.py  TrainScheduler_train_proxy_future.py  client.py  fed_server.py  fl_client.py  server.py  server_for_proxy_integration.py  server_train_proxy.py  test_vit.py  test_vit_fl.py  test_vit_sfl_v2_scheduler.py  train_vit.py  train_vit_fl.py  train_vit_sfl_v2.py  train_vit_sfl_v2_scheduler.py  train_vit_sfl_v2_scheduler_single.py
(+245 files in other folders)
